--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
+  "name": "10-Team-Generator",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "directories": {
     "test": "jest"
   },
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MWells012/10-Team-Generator"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MWells012/10-Team-Generator/issues"
+  },
+  "homepage": "https://github.com/MWells012/10-Team-Generator#readme",
   "dependencies": {
     "inquirer": "^8.2.4"
   },
